Fix the Settings menu and Add thr functionality to MovieDetail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.elearnna.popularmovies.MainActivity" />
         </activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity"
+                  android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
